--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -43,10 +43,10 @@ body {
     }
 
     .about {
+        position: relative;
         background: #f9f9f9;
         min-width: 280px;
         padding: 20px;
-        height: 100%;
         width: 20%;
         border-left: 1px solid #e0e0e0;
         transition: all ease-in-out 0.2s;
@@ -89,6 +89,50 @@ body {
             font-family: 'Source Sans Pro', sans-serif;
             margin-top: 20px;
         }
+
+        .links {
+            display: block;
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+
+            a {
+                display: flex;
+                align-items: center;
+                text-decoration: none;
+
+                svg {
+                    width: 25px;
+                    height: 25px;
+                    fill: rgba(#000, 0.5);
+                    transition: all ease-in-out 0.2s;
+                }
+
+                &:before {
+                    content: 'Fork Me';
+                    margin-right: 7px;
+                    background: #000;
+                    padding: 7px 10px;
+                    font-size: 12px;
+                    color: #fff;
+                    border-radius: 5px;
+                    opacity: 0;
+                    visibility: hidden;
+                    transition: all ease-in-out 0.2s;
+                }
+
+                &:hover {
+                    svg {
+                        fill: #000;
+                    }
+
+                    &:before {
+                        opacity: 1;
+                        visibility: visible;
+                    }
+                }
+            }
+        }
     }
 
     &.dark-mode {
@@ -105,7 +149,7 @@ body {
         }
 
         .about {
-            background: #2b2c2d;
+            background: #292c2f;
             color: #f6f6f6;
             border-left: 1px solid #545454;
 
@@ -114,8 +158,14 @@ body {
             }
 
             button {
-                border: 1px solid #f8f8f8;
+                border: 1px solid #909090;
                 color: #f6f6f6;
+            }
+
+            .links {
+                a svg {
+                    fill: #f6f6f6;
+                }
             }
         }
     }
