--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -68,11 +68,11 @@ body {
 
         p {
             font-size: 16px;
-            line-height: 20px;
+            line-height: 21px;
 
-            + p {
-                margin-top: 20px;
-            }
+            //+ p {
+            //    margin-top: 20px;
+            //}
 
             a {
                 color: inherit;
@@ -80,21 +80,34 @@ body {
             }
         }
 
-        button {
-            background: none;
-            border: 1px solid #e0e0e0;
-            font-size: 14px;
-            line-height: 40px;
-            padding: 0 20px;
-            font-family: 'Source Sans Pro', sans-serif;
-            margin-top: 20px;
+        .tools {
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            display: flex;
+            border-top: 1px solid #e0e0e0;
+            transition: all ease-in-out 0.2s;
+
+            button {
+                background: none;
+                border: 0;
+                font-size: 12px;
+                line-height: 35px;
+                height: 35px;
+                width: 50%;
+                text-align: left;
+                font-family: 'Source Sans Pro', sans-serif;
+                color: rgba(#000, 0.5);
+                padding: 0 20px;
+            }
         }
 
         .links {
-            display: block;
-            position: absolute;
-            bottom: 20px;
-            right: 20px;
+            display: flex;
+            justify-content: flex-end;
+            width: 50%;
+            padding: 0 20px;
 
             a {
                 display: flex;
@@ -102,33 +115,19 @@ body {
                 text-decoration: none;
 
                 svg {
-                    width: 25px;
-                    height: 25px;
+                    width: 20px;
+                    height: 20px;
                     fill: rgba(#000, 0.5);
                     transition: all ease-in-out 0.2s;
                 }
 
-                &:before {
-                    content: 'Fork Me';
-                    margin-right: 7px;
-                    background: #000;
-                    padding: 7px 10px;
-                    font-size: 12px;
-                    color: #fff;
-                    border-radius: 5px;
-                    opacity: 0;
-                    visibility: hidden;
-                    transition: all ease-in-out 0.2s;
+                + a {
+                    margin-left: 10px;
                 }
 
                 &:hover {
                     svg {
                         fill: #000;
-                    }
-
-                    &:before {
-                        opacity: 1;
-                        visibility: visible;
                     }
                 }
             }
@@ -157,9 +156,13 @@ body {
                 color: #f6f6f6;
             }
 
-            button {
-                border: 1px solid #909090;
-                color: #f6f6f6;
+            .tools {
+                border-top: 1px solid #545454;
+
+                button {
+                    //border: 0;
+                    color: #f6f6f6;
+                }
             }
 
             .links {
@@ -187,6 +190,7 @@ body {
             height: auto;
             border-top: 1px solid #e0e0e0;
             border-left: 0;
+            padding-bottom: 60px;
 
             h1 {
                 margin-bottom: 10px;
