--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -6,6 +6,15 @@ html {
     box-sizing: border-box;
 }
 
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+* {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 body {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
